# openglLearning

./: CMakeLists.txt
.cache/clangd/index/: context.c.62ED493AAC9D989A.idx  context.c.F6D613E65C4E79E6.idx  egl_context.c.1C5A90B533FF2F9F.idx  egl_context.c.ADB63510E361731C.idx  glad.c.8B16CA96325E09F6.idx  glad.c.A49DF69479607E05.idx  glad.h.850D6EB8DDDDEFA1.idx  glad.h.E5589C08BB0A8DFB.idx  glfw3.h.6E484F604126588B.idx  glfw3.h.C470B0BA1A651622.idx  glx_context.c.1DA6E7F639B93006.idx  glx_context.c.A723933EECDB5923.idx  init.c.23C209836135219C.idx  init.c.AD49100E67478D76.idx  input.c.7ACF5D3F4D1ABB66.idx  input.c.AFB5C2255999AA6C.idx  internal.h.26FFD0493275FB74.idx  internal.h.C3E25E7289E53B61.idx  khrplatform.h.E35575EDACB058E4.idx  khrplatform.h.F5CC622CBBA23E74.idx  linux_joystick.c.0021D30DA21527B1.idx  linux_joystick.c.D205315FE9DF1E39.idx  linux_joystick.h.607AC634B6664AFA.idx  linux_joystick.h.8D14D33B1114393F.idx  main.cpp.527066AE64976C1C.idx  main.cpp.D18FCAB4033F72FF.idx  mappings.h.908922397B92ED16.idx  mappings.h.9DF9065E70E9A0AE.idx  monitor.c.3BD05DFD15C57AA3.idx  monitor.c.E3CD6F97A90F149F.idx  null_init.c.92E0B37F92DFB1C2.idx  null_init.c.CB00D80664A7EC74.idx  null_joystick.c.1D97B6BE24DC5829.idx  null_joystick.c.4FA10BDBD6897078.idx  null_joystick.h.DCD2D9F79160DE45.idx  null_joystick.h.E4D392DC0AEF2AB2.idx  null_monitor.c.150CCBE41DDE3EB5.idx  null_monitor.c.314C301D22F2261F.idx  null_platform.h.1FB934EAE0C99267.idx  (+39 more)
inc/: shader.hpp  texture.hpp
shader/: fragment_shader_source.frag  vertex_shader_source.vert
src/: main.cpp
